refactor: extract N1qlTranslator function names to FunctionNames constants
Created FunctionNames.java with 62 constants for all @Function names
used in N1qlTranslator's walkFunction switch. Replaced all bare string
literals with constants to prevent silent query errors from typos.

649 tests pass.